--- a/aflac2020_teamG/Makefile.inc
+++ b/aflac2020_teamG/Makefile.inc
@@ -3,9 +3,12 @@ mkfile_path := $(dir $(lastword $(MAKEFILE_LIST)))
 APPL_COBJS +=
 
 APPL_CXXOBJS += \
-crew.o \
-SeesawCrimber.o \
-LimboDancer.o \
+StateMachine.o \
+Observer.o \
+Navigator.o \
+LineTracer.o \
+BlindRunner.o \
+ChallengeRunner.o \
 utility.o
 
 SRCLANG := c++
